overflow bug on name hotfix

--- a/css/main.scss
+++ b/css/main.scss
@@ -36,6 +36,7 @@
         height: fit-content;
         align-self: end;
         font-weight: 600;
+        overflow: hidden;
     }
 
     h2 {
